ToDo / Roadmap
 == Add ability to scale resulting images after cropping
 - Filter to fix image color / convert to black & white...
   * add filter for color manipulation_/adjustment - BUG: png images can't export to jpg!
 - png images do not scale well
 - handle empty images (placeholder) differently
 - Load images for Icons in background
 - Implement disable filter
   * Set image size, use it in pdf export.
   * disabling a filter (UI) should disable the rendering.
 - progress dialog while exporting / loading
 - Display page preview instead of original image in image list
 - drag and drop in the image list
 - error message on console: kfilemodule(5761)/kio (KDirModel) KDirModelPrivate::_k_slotDeleteItems: No node found for item that was just removed: KUrl("file:(((...")
 - application icon
 - windows port: security credentials (producer...)
 - add a placeholder at the end of the imagetablewidget, so that can insert an image at the end and insert an image on the right when there is no image in the list.
 - Application Icon for YASW
 - autocalibration with a printed grid (line detection)

2012xxxx; YASW 0.3
 - About dialog
 - open -> recent projects

20121118; YASW 0.2
 - export to pdf
 - a lot of small fixes in handling to pages types (even/odd)
 - cleaning old code away (only one page type handling)
 - menu for adding/removing images
 - key "delete" deletes an image
 - key "pgup/pgdown" to move image
 - windows port (build on linux with mxe.cc)
 - remove add left/right in favor of one "add", wich defaults to left.

20121006; YASW 0.1
 - First release
 - handling two page types (left/right)
 - Saving / Loading project Settings
 - Exporting project to images
 - Propaging page/image settings to other pages/images
